--- a/_css/common.css
+++ b/_css/common.css
@@ -1,1 +1,12 @@
-﻿
+﻿* {
+    margin: 0;
+    padding: 0;
+}
+
+#wrapper {
+    margin: 10%;
+}
+
+.svelte-button {
+    background-color: rgb(188, 236, 255);
+}
